@@ -1,5 +1,5 @@
 plugins {
-    id("net.ltgt.errorprone") version "2.0.2" apply false
+    id("net.ltgt.errorprone") version "3.1.0" apply false
     id("com.github.johnrengelman.shadow") version "8.1.1" apply false
     id("org.sonarqube") version "3.5.0.2730"
 }
@@ -16,6 +16,15 @@ sonarqube{
 allprojects {
     tasks.withType<Copy> {
         duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+    }
+
+    tasks.withType<Test> {
+        useJUnitPlatform()
+
+        jvmArgs(
+                "--enable-preview",
+                "--add-modules", "jdk.incubator.concurrent",
+        )
     }
 }
 
